--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout, Setup Python and cache req
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - name: Checkout into Repository 
+        uses: actions/checkout@v3
+
+      - name: Setup Python and cache req
+        uses: actions/setup-python@v4
         with:
           python-version: 3.10.4
           cache: pip
-      - run: pip install -r requirements.txt
+
+      - name: Install Requirements
+        run: pip install -r requirements.txt
 
       - name: Run Tests
         run: python test_chainex.py
