--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Run tests
 on: push
 
 jobs:
-  build:
+  run-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,7 +14,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.10.4
-          cache: pip
+
+      - name: Cache Requirements
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Install Requirements
         run: pip install -r requirements.txt
